--- a/src/app/class/class-add/class-add.component.html
+++ b/src/app/class/class-add/class-add.component.html
@@ -7,24 +7,57 @@
   </div>
   <div mat-dialog-content>
   <mat-form-field>
-    <mat-label>First Name</mat-label>
+    <mat-label>Class Name</mat-label>
      <input type="text"  matInput placeholder="Class Value" formControlName="value" name="value">
 </mat-form-field>
-<div formArrayName="skills">
-  <div *ngFor="let skill of skills.controls; let i=index">
+<div formArrayName="student">
+  <div *ngFor="let students of student.controls; let i=index">
     <div [formGroupName]="i">
       <mat-form-field>
-        <mat-label>Add Name</mat-label>
-        <input type="text" matInput placeholder="Class Value" formControlName="skill">
+        <mat-label>First Name</mat-label>
+        <input type="text" matInput placeholder="First Name" formControlName="firstname" name="Firstname">
       </mat-form-field>
-      <button mat-fab color="primary" (click)="removeSkill(i)"><mat-icon>delete</mat-icon></button>
+      <mat-form-field>
+        <mat-label>Last Name</mat-label>
+        <input type="text"  matInput placeholder="Last Name" formControlName="lastname" name="lastname" >
+        </mat-form-field>
+      <mat-form-field>
+        <mat-label>Age</mat-label>
+         <input type="text" appHighlight matInput placeholder="Age" formControlName="age" name="age" > 
+         </mat-form-field>
+        <mat-form-field>
+          <mat-label>Choose a date</mat-label>
+          <input matInput formControlName="date" [matDatepicker]="picker">
+          <mat-hint>DD/MM/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker> 
+           </mat-form-field>
+           <br>
+                <mat-label>Gender</mat-label>
+                <mat-radio-group aria-label="Select an option" formControlName="gender">
+                <mat-radio-button  *ngFor="let gen of genders"  [value]="gen">{{gen}}</mat-radio-button>
+                </mat-radio-group>
+                <br>
+               <mat-form-field class="new">
+                <mat-label>Ph-</mat-label>
+                <mat-select formControlName="num" name="num">
+                  <mat-option *ngFor="let ph of countryno" [value]="ph">
+                    {{ph}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field>
+                <mat-label>Phone</mat-label>
+             <input type="text" appHighlight matInput placeholder="Phone" formControlName="phone" name="phone">
+           </mat-form-field>
+      <button mat-fab color="primary" (click)="removeStudent(i)"><mat-icon>delete</mat-icon></button>
     </div>
   </div>
 </div>
 <div mat-dialog-action>
   <button mat-raised-button mat-dialog-close color="primary" type="submit">ADD Class</button>
   <button mat-button mat-dialog-close class="btn btn-outline-danger">close</button>
-  <button mat-raised-button color="warn" type="button" (click)="addSkills()">Add</button>
+  <button mat-raised-button color="warn" type="button" (click)="addStudent()">Add</button>
 
 </div>
 </div>
