--- a/src/app/class/class-add/class-add.component.html
+++ b/src/app/class/class-add/class-add.component.html
@@ -19,12 +19,20 @@
       </mat-form-field>
       <mat-form-field>
         <mat-label>Last Name</mat-label>
-        <input type="text"  matInput placeholder="Last Name" formControlName="lastname" name="lastname" >
+        <input type="text"  matInput placeholder="Last Name" formControlName="lastname" name="lastname">
         </mat-form-field>
       <mat-form-field>
         <mat-label>Age</mat-label>
          <input type="text" appHighlight matInput placeholder="Age" formControlName="age" name="age" > 
          </mat-form-field>
+         <mat-form-field>
+          <mat-label>Class</mat-label>
+          <mat-select formControlName="class_id" name="class">
+            <mat-option *ngFor="let student of classdropdown" [value]="student.class_id">
+              {{student.value}}
+            </mat-option>
+          </mat-select>
+       </mat-form-field>
         <mat-form-field>
           <mat-label>Choose a date</mat-label>
           <input matInput formControlName="date" [matDatepicker]="picker">
