--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -42,6 +42,9 @@
         <div class="menu">
             <a href="/class/list" class="nav-link">class</a>
         </div>
+        <div class="menu">
+            <a href="/boostrap/page" class="nav-link">BootStrap</a>
+        </div>
         <span class="example-spacer"></span>
         <div class="example-icon">
             <h3 class=" my-2 my-sm-0">Login:{{loginName.id}} <br> Phone:{{loginName.phone}}</h3>
