--- a/src/app/boostrap/boostrap.component.html
+++ b/src/app/boostrap/boostrap.component.html
@@ -28,28 +28,36 @@
             </div>
             <div class="col-sm-3">
                 <div class="border-end">
-                    <div class="py-3">
-                        <div class="d-flex flex-row">
-                            <div class="mx-auto">Price 6 items</div>
-                            <div class="mx-auto">$2000</div>
+                    <div class="py-3 row">
+                        <div class="col-sm-8">
+                            <div class="text-start">Price [6-items]</div>
                         </div>
-                        <div class="d-flex flex-row">
-                            <div class="mx-auto">Discount</div>
-                            <div class="mx-auto">-$150</div>
+                        <div class="col-sm-4">
+                            <div class="text-start">$2000</div>
                         </div>
-                        <div class="d-flex flex-row">
-                            <div class="mx-auto">shipingCharge</div>
-                            <div class="mx-auto">$50</div>
+                        <div class="col-sm-8">
+                            <div class="text-start">Discount</div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-start">$-150</div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="text-start">Shipping Charges</div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-start">$50</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="border-end">
-                    <div class="py-4">
-                        <div class="d-flex flex-row">
-                            <div class="mx-auto">Total amount</div>
-                            <div class="mx-auto">$2050</div>
+                    <div class="py-3 row">
+                        <div class="col-sm-8">
+                            <div class="text-start">Total amount</div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-start">$2050</div>
                         </div>
                     </div>
                 </div>
@@ -69,10 +77,10 @@
         <div class="container">
             <div class="row">
                     <div class="col-sm-4">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem;">
+                        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <div class="border-bottom">
-                                    <h6 class="card-subtitle mb-2 text-muted py-3">Sellar PandiyawRajan Store</h6>
+                                    <h3 class="card-subtitle mb-2 text-muted py-3">Sellar PandiyawRajan Store</h3>
                                 </div>
                                 <div class="row">
                                     <div class="col-sm-4 pt-2">
@@ -80,7 +88,7 @@
                                     </div>
                                     <div class="col-sm-8 pt-2">
                                         <div class="card-text">
-                                            <h6>12,792 phone back cover stock photos, vectors, and illustrations are available royalty-free.</h6>
+                                            <h5>12,792 phone back cover stock photos, vectors, and illustrations are available royalty-free.</h5>
                                             <p>Quentity <span>+</span><span>....</span><span>-</span></p>
                                             <p>$700 <del>$300</del> <span>(30%)</span></p>
                                         </div>
@@ -90,17 +98,24 @@
                                     </div>
                                     <div class="col-sm-8 pt-2">
                                         <div class="card-text">
-                                            <h6>12,792 phone back cover stock photos, vectors, and illustrations are available royalty-free.</h6>
+                                            <h5>12,792 phone back cover stock photos, vectors, and illustrations are available royalty-free.</h5>
                                             <p>Quentity <span>+</span><span>....</span><span>-</span></p>
                                             <p>$1200 <del>$450</del> <span>(30%)</span></p>
                                         </div>
                                     </div>
                                     <div class="col-sm-12 pt-2">
                                         <div class="border-top">
-                                            <h6 class="py-2">Shipping charges: $100</h6>
+                                            <h5 class="py-2">Shipping charges: $100</h5>
                                             <p>free shipping above mininum Order value of $600 from this seller avoid shipping charges by adding products from this seller.</p>
-                                            <div class="py-3">
-                                                <h6>Seller: PandiyawRajan Stores<span><button class="btn btn-outline-primary">add</button></span></h6> 
+                                            <div class="py-3 row">
+                                                <div class="col-sm-8">
+                                                    <h5 class="text-start">Seller: PandiyawRajan Stores</h5>
+                                                </div>
+                                                <div class="col-sm-4">
+                                                    <div class="text-end">
+                                                        <button class="btn btn-outline-primary">add</button>
+                                                    </div>
+                                                </div> 
                                             </div>
                                         </div>
                                     </div>
@@ -109,12 +124,12 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem; height: 30rem;">
+                        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <div class="border-bottom">
-                                    <h6 class="card-subtitle mb-2 py-2 text-muted">harish reddy,<br> indra nagar 1/234 branch kovilpatty</h6>
+                                    <h3 class="card-subtitle mb-2 py-2 text-muted">harish reddy,<br> indra nagar 1/234 branch kovilpatty</h3>
                                 </div>
-                                < class="card-text">
+                                <div class="card-text">
                                     <div class="row">
                                         <div class="col-sm-7">
                                             Address: Harish Reddy(default) indharanager, HAL Stage 2, 3rd cross,909. <br>
@@ -137,37 +152,52 @@
                                             </div>
                                         </div>
                                     </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         
-                        <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem; height: 25rem;">
+                        <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <div class="border-bottom">
-                                    <h6 class="card-subtitle mb-2 pt-5 text-muted">Price details 4-products..</h6>
+                                    <h3 class="card-subtitle mb-2 pt-5 text-muted">Price details 4-products..</h3>
                                 </div>
                                 <p class="card-text">
                                     <div class="row">
                                         <div class="col-sm-12">
                                             <div class="border-bottom py-3">
-                                                <div class="d-flex flex-row">
-                                                    <div class="mx-auto">Price [6-items]</div>
-                                                    <div class="mx-auto">$2000</div>
-                                                </div>
-                                                <div class="d-flex flex-row">
-                                                    <div class="mx-auto">Discount</div>
-                                                    <div class="mx-auto">$-150</div>
-                                                </div>
-                                                <div class="d-flex flex-row">
-                                                    <div class="mx-auto">Shipping Charges</div>
-                                                    <div class="mx-auto">$50</div>
-                                                </div>
-                                            </div>
-                                            <div class="border-bottom py-3">
-                                                <div class="d-flex flex-row">
-                                                    <div class="mx-auto">Total Amount</div>
-                                                    <div class="mx-auto">$2035</div>
+                                                <div class="row">
+                                                    <div class="col-sm-6">
+                                                        <div class="text-start">Price [6-items]</div>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-end">$2000</div>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-start">Discount</div>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-end">$-150</div>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-start">Shipping Charges</div>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-end">$50</div>
+                                                    </div>
+                                                    <div class="border-top py-2 mt-2">
+                                                        
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-start">Total Amount</div>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <div class="text-end">$2035</div>
+                                                    </div>
+                                                    <div class="border-bottom py-2">
+
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -177,10 +207,10 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="card shadow-lg p-3 mb-5 bg-white rounded" style="width: 25rem;">
+                    <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <div class="border-bottom">
-                                <h6 class="card-subtitle mb-2 text-muted py-3">Sellar PandiyawRajan Store</h6>
+                                <h3 class="card-subtitle mb-2 text-muted py-3">Sellar PandiyawRajan Store</h3>
                             </div>
                             <div class="row">
                                 <div class="col-sm-4 pt-2">
@@ -188,31 +218,34 @@
                                 </div>
                                 <div class="col-sm-8 pt-2">
                                     <div class="card-text">
-                                        <h6>Artesia Mango Wood Rocking Chair for Living Room || Home Decor || Easy Chair Solid Wood 1 Seater Rocking Chairs  (Finish Color - Green, Pre-assembled)</h6>
+                                        <h5>Artesia Mango Wood Rocking Chair for Living Room || Home Decor || Easy Chair Solid Wood 1 Seater Rocking Chairs  (Finish Color - Green, Pre-assembled)</h5>
                                         <p>Quentity <span>+</span><span>....</span><span>-</span></p>
                                         <p>₹12,999 <del>₹21,999</del> <span>40% off</span></p>
                                     </div>
                                 </div>
                                 <div class="col-sm-4 pt-2">
-                                    <img src="https://rukminim2.flixcart.com/image/416/416/xif0q/rocking-chair/k/7/l/60-1-seater-rosewood-sheesham-101-20-grey-1-black-wooden-luxury-original-imaghw4f9eqmj4ss.jpeg?q=70" class="img-fluid max-width: 25%" alt="">
+                                    <img src="https://rukminim2.flixcart.com/image/416/416/xif0q/rocking-chair/k/7/l/60-1-seater-rosewood-sheesham-101-20-grey-1-black-wooden-luxury-original-imaghw4f9eqmj4ss.jpeg?q=70 " class="img-fluid max-width: 25%" alt="">
                                 </div>
                                 <div class="col-sm-8 pt-2">
                                     <div class="card-text">
-                                        <h6>Artesia Teak Wood Rocking Chair For Living Room / Garden - Rosewood Finishing for adults/Grand parents Solid Wood 1 Seater Rocking Chairs  (Finish Color - Natural, Pre-assembled)</h6>
+                                        <h5>Artesia Teak Wood Rocking Chair For Living Room / Garden - Rosewood Finishing for adults/Grand parents Solid Wood 1 Seater Rocking Chairs  (Finish Color - Natural, Pre-assembled)</h5>
                                         <p>Quentity <span>+</span><span>....</span><span>-</span></p>
                                         <p>₹9,999  <del>₹24,999</del> <span>60% off</span></p>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 pt-2">
                                     <div class="border-top">
-                                        <h6 class="py-2">Shipping charges: ₹100</h6>
+                                        <h3 class="py-2">Shipping charges: ₹100</h3>
                                         <p>free shipping above mininum Order value of ₹600 from this seller avoid shipping charges by adding products from this seller.</p>
-                                        <div class="py-3">
-                                            <div class="d-flex flex-row">
-                                                <div class="mx-auto">Seller: PandiyawRajan Stores</div>
-                                                <div class="mx-auto"><button class="btn btn-outline-primary">add</button></div>
+                                        <div class="py-3 row">
+                                            <div class="col-sm-8">
+                                                <h5 class="text-start">Seller: PandiyawRajan Stores</h5>
                                             </div>
-                                            <h6><span></span></h6> 
+                                            <div class="col-sm-4">
+                                                <div class="text-end">
+                                                    <button class="btn btn-outline-primary">add</button>
+                                                </div>
+                                            </div> 
                                         </div>
                                     </div>
                                 </div>
