--- a/src/app/boostrap/boostrap.component.html
+++ b/src/app/boostrap/boostrap.component.html
@@ -105,7 +105,7 @@
                                     </div>
                                     <div class="col-sm-12 pt-2">
                                         <div class="border-top">
-                                            <h5 class="py-2">Shipping charges: $100</h5>
+                                            <h3 class="py-2">Shipping charges: $100</h3>
                                             <p>free shipping above mininum Order value of $600 from this seller avoid shipping charges by adding products from this seller.</p>
                                             <div class="py-3 row">
                                                 <div class="col-sm-8">
@@ -237,11 +237,11 @@
                                     <div class="border-top">
                                         <h3 class="py-2">Shipping charges: ₹100</h3>
                                         <p>free shipping above mininum Order value of ₹600 from this seller avoid shipping charges by adding products from this seller.</p>
-                                        <div class="py-3 row">
-                                            <div class="col-sm-8">
+                                        <div class="row py-3">
+                                            <div class="col-sm-6">
                                                 <h5 class="text-start">Seller: PandiyawRajan Stores</h5>
                                             </div>
-                                            <div class="col-sm-4">
+                                            <div class="col-sm-6">
                                                 <div class="text-end">
                                                     <button class="btn btn-outline-primary">add</button>
                                                 </div>
