--- a/src/app/boostrap/boostrap.component.html
+++ b/src/app/boostrap/boostrap.component.html
@@ -8,7 +8,7 @@
 <body>
     <div class="py-1 text-center bg-light border-bottom shadow-lg p-3 mb-5 bg-white rounded">
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-sm-3 border-end">
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="text-center">
@@ -18,47 +18,41 @@
                         </div>
                     </div>
                     <div class="col-sm-6">
-                       <div class="border-end">
                         <div class="py-4">
                             <p>PRICE DETAILS(4-products)</p>
                         </div>
-                       </div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="border-end">
-                    <div class="py-3 row">
-                        <div class="col-sm-8">
-                            <div class="text-start">Price [6-items]</div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="text-start">$2000</div>
-                        </div>
-                        <div class="col-sm-8">
-                            <div class="text-start">Discount</div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="text-start">$-150</div>
-                        </div>
-                        <div class="col-sm-8">
-                            <div class="text-start">Shipping Charges</div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="text-start">$50</div>
-                        </div>
+            <div class="col-sm-3 border-end">
+                <div class="py-3 row">
+                    <div class="col-sm-8">
+                        <div class="text-start">Price [6-items]</div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="text-start">$2000</div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="text-start">Discount</div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="text-start">$-150</div>
+                    </div>
+                    <div class="col-sm-8">
+                        <div class="text-start">Shipping Charges</div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="text-start">$50</div>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="border-end">
-                    <div class="py-3 row">
-                        <div class="col-sm-8">
-                            <div class="text-start">Total amount</div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="text-start">$2050</div>
-                        </div>
+            <div class="col-sm-3 border-end">
+                <div class="py-3 row">
+                    <div class="col-sm-8">
+                        <div class="text-start">Total amount</div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="text-start">$2050</div>
                     </div>
                 </div>
             </div>
@@ -109,7 +103,7 @@
                                             <p>free shipping above mininum Order value of $600 from this seller avoid shipping charges by adding products from this seller.</p>
                                             <div class="py-3 row">
                                                 <div class="col-sm-8">
-                                                    <h5 class="text-start">Seller: PandiyawRajan Stores</h5>
+                                                    <h4 class="text-start text-muted">Seller: PandiyawRajan Stores</h4>
                                                 </div>
                                                 <div class="col-sm-4">
                                                     <div class="text-end">
@@ -161,7 +155,7 @@
                         <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                             <div class="card-body">
                                 <div class="border-bottom">
-                                    <h3 class="card-subtitle mb-2 pt-5 text-muted">Price details 4-products..</h3>
+                                    <h3 class="card-subtitle mb-2 pt-4 text-muted">Price details 4-products..</h3>
                                 </div>
                                 <p class="card-text">
                                     <div class="row">
@@ -238,10 +232,10 @@
                                         <h3 class="py-2">Shipping charges: ₹100</h3>
                                         <p>free shipping above mininum Order value of ₹600 from this seller avoid shipping charges by adding products from this seller.</p>
                                         <div class="row py-3">
-                                            <div class="col-sm-6">
-                                                <h5 class="text-start">Seller: PandiyawRajan Stores</h5>
+                                            <div class="col-sm-8">
+                                                <h4 class="text-start text-muted">Seller: PandiyawRajan Stores</h4>
                                             </div>
-                                            <div class="col-sm-6">
+                                            <div class="col-sm-4">
                                                 <div class="text-end">
                                                     <button class="btn btn-outline-primary">add</button>
                                                 </div>
