--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -63,5 +63,12 @@
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
-<router-outlet></router-outlet>
-
+<body class="my-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</body>
